# Casa-Monarca

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
Casa_Monarca/: __init__.py  views.py
Casa_Monarca/auth/: auth.py
Casa_Monarca/auth/templates/: blank.html  main.html
Casa_Monarca/components/: components.py
Casa_Monarca/user/: user.py
Casa_Monarca/user/static/: NavBar.css  document_history.css
Casa_Monarca/user/templates/: NavBar.html  document_history.html
auth/: auth.py
auth/static/: styles.css
auth/templates/: main.html
